--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.4.1",
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
