chore: update .env sample

--- a/.env.sample
+++ b/.env.sample
@@ -5,8 +5,12 @@
 # MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/yourDatabase
 MONGO_URI=
 
+DB_NAME=yourDatabase
+
 # Server port
-PORT=8080
+PORT=3000
+
+CORS_ORIGIN=your_frontend_url, list_of_allowed_origins, separated_by_commas
 
 # Node environment (development or production)
 NODE_ENV=development
